PyAMF Changelog
===============

This file contains information about the changes between the different
versions of PyAMF.

.. contents::

0.4.2 (unreleased)
------------------
 - Fixed an issue in the GAE adapter where dynamic properties would be missing
   on referenced objects. (Ticket:511)
 - Fixed a critical issue with AMF0 reference counting when encoding remoting
   responses. (Ticket:510)
 - Strengthened http header handling in the client (Ticket:492)
 - Support for Django i18n ugettext_lazy (Ticket:496)
 - Added support for microseconds for datetime objects. Thanks to Derek Payton
   for the patch. (Ticket:490)
 - Added support for property types on SQLAlchemy mapped classes. (Ticket:491)
 - Added support for property types for Google AppEngine db.Model and
   db.Expando. (Ticket:487)

0.4.1 (2009-02-23)
------------------
 - amf0.Encoder.use_amf3 has been extended to cover all object types
   (Ticket:453,467)
 - Property types on Django models will now encode as expected. (Ticket:480)
 - Django models.ForeignKey properties will be followed only if previously
   accessed outside of PyAMF. `_[attr]_cache` is no longer encoded.
   (Ticket:456)
 - Encoding {0:0, '0':1} will now raise an AttributeError. (Ticket:458)
 - Google AppEngine adapter improvements - see ticket for details (Ticket:479)
 - amf0.Encoder will encode all elements as AMF3 if use_amf3 option is set to
   True (Ticket:453)
 - Unicode handling in __repr__ functions has been improved (Ticket:455)
 - object attributes and dict keys are now utf8 encoded bytestrings. Python
   \**kwargs doesn't accept unicode key objects. (Ticket:463)
 - Django models.TimeField, models.DateField will now be converted to the
   correct type (datetime.time and datetime.date respectively).
   fields.NOT_PROVIDED is also checked for by converting to pyamf.Undefined
   and back again. (Ticket:457)

0.4 (2009-01-18)
----------------
 - cpyamf now deals with exceptional floats the same way as pure python -